Bug 144304 - CRASH: Selecting all and cutting in specific document / Inserting section
Summary: CRASH: Selecting all and cutting in specific document / Inserting section
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected, regression
: 144321 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-09-05 01:11 UTC by Aron Budea
Modified: 2021-09-06 11:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-09-05 01:11:31 UTC
These are two different issues, coming from the same commit.

I. Perform the steps of bug 139135.

1. Open attachment 155631 [details] from bug 104254,
2. CTRL+A,
3. CTRL+X.

-> Crash.

II. Insert a section using Insert -> Section..., then press Insert.

-> Crash.

Regressions are from the following commit.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=426930d0c4bd6f782a04a92e8a36e92cd65e186f
author		Noel Grandin <noelgrandin@gmail.com>	2021-08-28 08:35:29 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-08-28 15:13:20 +0200

speedup dynamic_cast to SwTextFrame
Comment 1 Aron Budea 2021-09-05 01:23:59 UTC
Proposed fix: https://gerrit.libreoffice.org/c/core/+/121662
Comment 2 Commit Notification 2021-09-05 06:29:15 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c36da188cc7c9d89c331deb6326f045b6e9f0ad9

tdf#144304 Fix crashes from "speedup dynamic_cast to SwTextFrame"

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Timur 2021-09-06 11:56:56 UTC
*** Bug 144321 has been marked as a duplicate of this bug. ***