tdf#144304 Fix crashes from "speedup dynamic_cast to SwTextFrame"

Also preemptively adjust cases where FindNextCnt(true) or
FindPrevCnt() can be null.

Regressions from 426930d0c4bd6f782a04a92e8a36e92cd65e186f.

Change-Id: Idb91464ecd285f6f5cf2e399c00faa2dfbbd5601