sw/source/core/docnode/ndsect.cxx
@@ -1121,9 +1121,11 @@ void SwSectionNode::MakeFramesForAdjacentContentNode(const SwNodeIndex & rIdx)
                     if ( pViewShell && pViewShell->GetLayout() &&
                          pViewShell->GetLayout()->IsAnyShellAccessible() )
                     {
+                        auto pNext = pNew->FindNextCnt( true );
+                        auto pPrev = pNew->FindPrevCnt();
                         pViewShell->InvalidateAccessibleParaFlowRelation(
-                            pNew->FindNextCnt( true )->DynCastTextFrame(),
-                            pNew->FindPrevCnt()->DynCastTextFrame() );
+                            pNext ? pNext->DynCastTextFrame() : nullptr,
+                            pPrev ? pPrev->DynCastTextFrame() : nullptr );
                     }
                 }
                 pNew = pSct;
@@ -1147,9 +1149,11 @@ void SwSectionNode::MakeFramesForAdjacentContentNode(const SwNodeIndex & rIdx)
                 if ( pViewShell && pViewShell->GetLayout() &&
                      pViewShell->GetLayout()->IsAnyShellAccessible() )
                 {
+                    auto pNext = pNew->FindNextCnt( true );
+                    auto pPrev = pNew->FindPrevCnt();
                     pViewShell->InvalidateAccessibleParaFlowRelation(
-                        pNew->FindNextCnt( true )->DynCastTextFrame(),
-                        pNew->FindPrevCnt()->DynCastTextFrame() );
+                        pNext ? pNext->DynCastTextFrame() : nullptr,
+                        pPrev ? pPrev->DynCastTextFrame() : nullptr );
                 }
             }
             if ( bInitNewSect )
